fixed reduced motion missing background bug

--- a/www/less/operator.less
+++ b/www/less/operator.less
@@ -672,6 +672,7 @@ p.sub-head {
 
 
 .chat-bg-flashing-alert {
+  background-color: rgba(36,36,35,.94);
   animation: pulse 4.5s infinite;
 }
 
